k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: octant
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app: octant
